Add mentions, /info, versioning and scraper fixes
Introduce bot versioning (data/version.json + loader) and a new /info command showing version and changelog. Add a role-mention system (toggleable) with commands to add/remove mention roles and create default roles; store mention settings per guild and include mention handling when sending product embeds. Refactor notification flow to send per-product messages (separate new/updated handling), select channels per notification type, and set sensible defaults when subscribing. Improve embed content: combine reviews/rating display, cleaner "Description" prefix removal, localized "Now" and schedule/list display strings. Scraper updates: improved infinite-scroll handling, bottom scroll for product pages, removed modal changelog extraction, and added rating & more robust reviews parsing. Update English and French language files with new strings.

--- a/data/lang/en.json
+++ b/data/lang/en.json
@@ -62,8 +62,47 @@
   
   "set_currency_success": "✅ Currency set to **{currency}** (Global Setting).",
   
-  "embed_changelog": "📜 Changelog",
   "none": "None",
   "license_personal": "Personal",
-  "license_professional": "Professional"
+  "license_professional": "Professional",
+  "embed_reviews": "👤 Reviews",
+  "embed_rating": "⭐ Rating",
+  "embed_now": "Now",
+  "info_whats_new": "What's new in {version}",
+  "info_developer": "Developer",
+  "info_platform": "Platform",
+  "notify_prefix": "📢 {label}",
+  "set_mention_status": "Role mentions are now **{status}**.",
+  "status_enabled": "ENABLED",
+  "status_disabled": "DISABLED",
+  "set_mention_role_added": "Role {role} **added** to {type} list.",
+  "set_mention_role_already": "Role {role} is **already** in the list.",
+  "set_mention_role_removed": "Role {role} **removed** from {type} list.",
+  "set_mention_role_not_found": "Role {role} was **not** in the list.",
+  "error_missing_permissions": "I need **Manage Roles** permission to do this.",
+  "role_new_name": "New Fab Release",
+  "role_updated_name": "Updated Fab Release",
+  "role_creation_reason": "Auto-created by Fab Seller Bot",
+  "role_existing_suffix": "(Existing)",
+  "set_create_roles_success": "Roles setup complete: {roles}",
+  "set_create_roles_already": "Roles already configured.",
+  "check_progress_detail": "\nItem {current}/{total}: {product}",
+  "list_products_detail": "Products: {count}\nCheck: {check} {icon}",
+  "list_schedule_footer": "Schedule: {day} {time} ({tz})",
+  "list_never": "Never",
+  "info_version_prefix": "Version: **{version}**",
+  "info_developer_label": "Developer",
+  "info_platform_label": "Platform",
+  "day_monday": "Monday",
+  "day_tuesday": "Tuesday",
+  "day_wednesday": "Wednesday",
+  "day_thursday": "Thursday",
+  "day_friday": "Friday",
+  "day_saturday": "Saturday",
+  "day_sunday": "Sunday",
+  "type_new_products": "New Products",
+  "type_updated_products": "Updated Products",
+  "bot_name": "Fab Seller Tracker Bot",
+  "developer_name": "NEVAR",
+  "platform_name": "Fab.com"
 }
