--- a/data/lang/fr.json
+++ b/data/lang/fr.json
@@ -62,8 +62,47 @@
   
   "set_currency_success": "✅ Devise définie sur **{currency}** (Paramètre Global).",
   
-  "embed_changelog": "📜 Historique",
   "none": "Aucun",
   "license_personal": "Personnel",
-  "license_professional": "Professionnel"
+  "license_professional": "Professionnel",
+  "embed_reviews": "👤 Avis",
+  "embed_rating": "⭐ Note",
+  "embed_now": "Maintenant",
+  "info_whats_new": "Quoi de neuf dans {version}",
+  "info_developer": "Développeur",
+  "info_platform": "Plateforme",
+  "notify_prefix": "📢 {label}",
+  "set_mention_status": "Les mentions de rôle sont maintenant **{status}**.",
+  "status_enabled": "ACTIVÉES",
+  "status_disabled": "DÉSACTIVÉES",
+  "set_mention_role_added": "Rôle {role} **ajouté** à la liste {type}.",
+  "set_mention_role_already": "Le rôle {role} est **déjà** dans la liste.",
+  "set_mention_role_removed": "Rôle {role} **retiré** de la liste {type}.",
+  "set_mention_role_not_found": "Le rôle {role} n'était **pas** dans la liste.",
+  "error_missing_permissions": "J'ai besoin de la permission **Gérer les rôles** pour faire cela.",
+  "role_new_name": "Nouveau Fab Release",
+  "role_updated_name": "MAJ Fab Release",
+  "role_creation_reason": "Créé automatiquement par le bot Fab",
+  "role_existing_suffix": "(Existant)",
+  "set_create_roles_success": "Configuration des rôles terminée : {roles}",
+  "set_create_roles_already": "Les rôles sont déjà configurés.",
+  "check_progress_detail": "\nProduit {current}/{total} : {product}",
+  "list_products_detail": "Produits : {count}\nVérif : {check} {icon}",
+  "list_schedule_footer": "Planning : {day} {time} ({tz})",
+  "list_never": "Jamais",
+  "info_version_prefix": "Version : **{version}**",
+  "info_developer_label": "Développeur",
+  "info_platform_label": "Plateforme",
+  "day_monday": "Lundi",
+  "day_tuesday": "Mardi",
+  "day_wednesday": "Mercredi",
+  "day_thursday": "Jeudi",
+  "day_friday": "Vendredi",
+  "day_saturday": "Samedi",
+  "day_sunday": "Dimanche",
+  "type_new_products": "Nouveaux Produits",
+  "type_updated_products": "Produits Mis à Jour",
+  "bot_name": "Fab Seller Tracker Bot",
+  "developer_name": "NEVAR",
+  "platform_name": "Fab.com"
 }
