Add Stealth, UE versions & changelog scraping
Improve scraping reliability and enrich product notifications: add Playwright stealth support (playwright-stealth) and browser launch args to bypass Cloudflare/CAPTCHA, extract Supported Unreal Engine versions and automated changelog entries from product pages, and include these fields in product payloads. Update Discord embed layout to show UE versions and a filtered changelog entry, refine reviews/default handling and description trimming. Bump package version to 2.0.0, add new language keys (en/fr), update README with features/commands and install notes, add playwright-stealth to requirements, and make requirement parsing in run.py more robust (skip comments/empty lines and simple package name parsing).

--- a/data/lang/en.json
+++ b/data/lang/en.json
@@ -44,6 +44,8 @@
   "embed_seller": "🏪 Seller",
   "embed_last_update": "📅 Last Update",
   "embed_change": "📝 Change",
+  "embed_ue_versions": "🎮 UE Versions",
+  "embed_changelog": "📜 Changelog",
   "embed_description": "📄 Description",
   "embed_footer": "Fab Seller Tracker",
   "change_update_format": "📅 {old} ➜ {new}",
