--- a/data/lang/fr.json
+++ b/data/lang/fr.json
@@ -44,6 +44,8 @@
   "embed_seller": "🏪 Seller",
   "embed_last_update": "📅 Dernière MAJ",
   "embed_change": "📝 Changement",
+  "embed_ue_versions": "🎮 Versions UE",
+  "embed_changelog": "📜 Changelog",
   "embed_description": "📄 Description",
   "embed_footer": "Fab Seller Tracker",
   "change_update_format": "📅 {old} ➜ {new}",
