Add VAT-exclusive multi-currency price handling
Support dual-currency (USD/EUR) price extraction and display with VAT-exclusive labeling. Introduces get_product_details_with_currency and returns price as a currency-keyed dict; updates scraper to parse priceTier objects, extract USD fallback values, set Playwright locale/timezone per currency, and preserve multi-license pricing per currency. Bot main now selects a guild currency, appends localized "Excl. Tax" labels to displayed prices, and reads dict-style prices. detect_changes gained a currency parameter to compare prices for the requested currency. Also updates README, language entries (en/fr) for the new label, and bumps version to 2.1.0 with changelog entries.

--- a/data/lang/fr.json
+++ b/data/lang/fr.json
@@ -67,6 +67,7 @@
   "none": "Aucun",
   "license_personal": "Personnel",
   "license_professional": "Professionnel",
+  "excl_tax": "Hors Taxe",
   "embed_reviews": "👤 Avis",
   "embed_rating": "⭐ Note",
   "embed_now": "Maintenant",
