--- a/data/lang/en.json
+++ b/data/lang/en.json
@@ -67,6 +67,7 @@
   "none": "None",
   "license_personal": "Personal",
   "license_professional": "Professional",
+  "excl_tax": "Excl. Tax",
   "embed_reviews": "👤 Reviews",
   "embed_rating": "⭐ Rating",
   "embed_now": "Now",
