Add seller_url, normalize URLs, improve scraping
Introduce seller_url linkage and URL normalization across the bot: add seller_url field to Product model and products table (with migration), implement get_seller_products and update save_products to persist seller association. Standardize fab.com URLs (remove www, case-insensitive seller name extraction) to avoid duplicate tracking/notifications. Improve scraper UE-version extraction with multiple DOM and regex fallbacks. Add proactive validation and messaging for missing notification channels, enhance sync logging and success/error counts for both automatic and manual checks. Update README and language files, bump version to 3.1.0, update bundled DB, and add a small export_to_json tool to dump DB tables to JSON.

--- a/bot/resources/lang/en.json
+++ b/bot/resources/lang/en.json
@@ -127,5 +127,7 @@
   "config_mentions_count": "{new} roles for new, {upd} roles for updates",
   "config_roles_new": "Roles (New)",
   "config_roles_upd": "Roles (Updated)",
-  "config_seller_list": "Tracked Sellers"
+  "config_seller_list": "Tracked Sellers",
+  "sub_no_channel_tip": "💡 **Tip**: No notification channel is configured. Use `/set channel` to receive alerts!",
+  "check_no_channel_warn": "Error: No notification channel is configured. The check has been cancelled."
 }
