Prevent concurrent syncs and improve sync handling
Add an is_syncing flag to the bot to prevent overlapping automated and manual syncs; both _check_all_sellers and the manual check_now handler now early-exit if a sync is in progress and set/reset the flag (using finally) to avoid race conditions. Rework sync loop to improve logging, error handling and DB status updates, and ensure notifications for new/updated products are sent consistently; success/error counters and messages have been adjusted accordingly. Add new i18n messages (en/fr) to inform users when a sync is already running.

--- a/bot/resources/lang/fr.json
+++ b/bot/resources/lang/fr.json
@@ -129,5 +129,6 @@
   "config_roles_upd": "Rôles (MAJ)",
   "config_seller_list": "Liste des Sellers",
   "sub_no_channel_tip": "💡 **Astuce** : Aucun canal de notification n'est configuré. Utilisez `/set channel` pour recevoir les alertes !",
-  "check_no_channel_warn": "Erreur : Aucun canal de notification n'est configuré. La vérification a été annulée."
+  "check_no_channel_warn": "Erreur : Aucun canal de notification n'est configuré. La vérification a été annulée.",
+  "sync_already_in_progress": "Une synchronisation est déjà en cours. Veuillez attendre qu'elle se termine avant d'en lancer une autre."
 }
