--- a/bot/resources/lang/en.json
+++ b/bot/resources/lang/en.json
@@ -129,5 +129,6 @@
   "config_roles_upd": "Roles (Updated)",
   "config_seller_list": "Tracked Sellers",
   "sub_no_channel_tip": "💡 **Tip**: No notification channel is configured. Use `/set channel` to receive alerts!",
-  "check_no_channel_warn": "Error: No notification channel is configured. The check has been cancelled."
+  "check_no_channel_warn": "Error: No notification channel is configured. The check has been cancelled.",
+  "sync_already_in_progress": "A synchronization is already in progress. Please wait for it to complete before starting another one."
 }
