--- a/bot/resources/lang/fr.json
+++ b/bot/resources/lang/fr.json
@@ -130,5 +130,13 @@
   "config_seller_list": "Liste des Sellers",
   "sub_no_channel_tip": "💡 **Astuce** : Aucun canal de notification n'est configuré. Utilisez `/set channel` pour recevoir les alertes !",
   "check_no_channel_warn": "Erreur : Aucun canal de notification n'est configuré. La vérification a été annulée.",
-  "sync_already_in_progress": "Une synchronisation est déjà en cours. Veuillez attendre qu'elle se termine avant d'en lancer une autre."
+  "sync_already_in_progress": "Une synchronisation est déjà en cours. Veuillez attendre qu'elle se termine avant d'en lancer une autre.",
+  "freq_daily": "Quotidien",
+  "freq_weekly": "Hebdomadaire",
+  "freq_monthly": "Mensuel",
+  "error_invalid_weekday": "Nom de jour invalide. Veuillez utiliser un nom de jour complet (ex: Lundi).",
+  "error_invalid_day_num": "Numéro de jour invalide. Veuillez choisir un nombre entre 1 et 28.",
+  "set_schedule_success_daily": "✅ Planning mis à jour : Sync **{freq}** à **{hour:02d}:{minute:02d}**.",
+  "set_schedule_success_weekly": "✅ Planning mis à jour : Sync **{freq}** chaque **{day}** à **{hour:02d}:{minute:02d}**.",
+  "set_schedule_success_monthly": "✅ Planning mis à jour : Sync **{freq}** chaque **jour {day}** du mois à **{hour:02d}:{minute:02d}**."
 }
