Add i18n translations and logging (v3.3.0)
Overhaul logging and messages to use JSON-based translations and add bilingual support. Switch default language to French and add many new translation keys (standardized across codebase). Add an early translation helper in run.py so startup messages work before dependencies are installed, and update run/startup flows to use localized strings. Replace hardcoded logger messages throughout bot/core with translation lookups, bump version to 3.3.0 and include changelog entries, and update the bundled tracker database.

--- a/bot/resources/lang/en.json
+++ b/bot/resources/lang/en.json
@@ -160,5 +160,66 @@
   "publish_rate_limited": "⏳ Rate limited. Will retry in {seconds}s...",
   "publish_not_announcement_channel": "⚠️ Channel is not an announcement channel. Publishing skipped.",
   "publish_error": "❌ Failed to publish: {error}",
-  "config_publish": "Publish to Followers"
+  "config_publish": "Publish to Followers",
+
+  "run_req_not_found": "{requirements} not found!",
+  "run_missing_deps": "Missing dependencies: {deps}",
+  "run_installing_deps": "Installing dependencies...",
+  "run_deps_installed": "Dependencies installed successfully.",
+  "run_deps_install_error": "Failed to install dependencies: {error}",
+  "run_press_enter": "Press Enter to close...",
+  "run_playwright_ready": "Playwright browsers are ready.",
+  "run_playwright_check_failed": "Browser check failed ({error}). Installing Firefox...",
+  "run_playwright_installed": "Playwright browsers installed successfully.",
+  "run_playwright_warning": "Warning: Failed to check Playwright: {error}",
+  "run_import_error": "Failed to import bot: {error}",
+  "run_token_missing": "ASSETS_BOT_TOKEN not defined!",
+  "run_token_hint": "Please set it in token.txt or config.py",
+  "run_starting": "Starting Fab Seller Tracker Bot...",
+  "run_stopped_user": "Bot stopped by user.",
+  "run_critical_error": "Critical error: {error}",
+
+  "log_version_load_error": "Failed to load version info: {error}",
+  "log_slash_synced": "Slash commands synced",
+  "log_connected": "Connected as {user}",
+  "log_scheduler_cancelled": "Scheduler task cancelled for restart",
+  "log_scheduler_restarted": "Scheduler task restarted",
+  "log_next_sync": "│ 🕒 NEXT SYNC IN: {hours} hours ({time})",
+  "log_no_schedule": "No active schedules found, sleeping 1 hour",
+  "log_scheduler_error": "Scheduler error: {error}",
+  "log_sync_skipped": "Automated sync skipped: Sync already in progress",
+  "log_sync_started": "│ 🔄 SYNC STARTED ({count} sellers to check)        │",
+  "log_syncing_seller": "  » Syncing [{current}/{total}]: {seller}",
+  "log_changes": "  ↳ Changes: {new} new, {upd} updated",
+  "log_scraping_failed": "  ↳ Scraping failed for {seller}",
+  "log_check_error": "  ↳ Check error for {url}: {error}",
+  "log_sync_completed": "│ ✅ SYNC COMPLETED: {success} success, {errors} errors      │",
+  "log_guild_notif_error": "Guild notification error {guild}: {error}",
+  "log_not_announcement": "Channel {channel} is not an announcement channel",
+  "log_published_immediate": "Message {msg} published immediately",
+  "log_queued": "Message {msg} queued for publishing (queue size: {size}, ~{time} min)",
+  "log_publish_no_perms": "Missing permissions to publish in channel {channel}",
+  "log_publish_queue_error": "Error queuing message for publish: {error}",
+  "log_publish_worker_start": "Publish worker started",
+  "log_collect_wait": "First message received, waiting {delay}s to collect more...",
+  "log_publishing_batch": "Publishing batch of {count} messages (queue remaining: {remaining})",
+  "log_published_success": "Message {msg} published successfully",
+  "log_rate_limited": "Rate limited on publish. Waiting {seconds}s...",
+  "log_published_retry": "Message {msg} published after rate limit wait",
+  "log_publish_retry_fail": "Failed to publish after retry: {error}",
+  "log_http_error": "HTTP error publishing message {msg}: {error}",
+  "log_publish_forbidden": "Missing permissions to publish message {msg}",
+  "log_publish_error": "Error publishing message {msg}: {error}",
+  "log_batch_wait": "Batch complete. Waiting {delay}s before next batch ({remaining} remaining)",
+  "log_worker_cancelled": "Publish worker cancelled",
+  "log_worker_error": "Publish worker error: {error}",
+  "log_manual_sync_start": "│ 🔄 MANUAL SYNC STARTED (Guild: {guild})",
+  "log_manual_sync_complete": "│ ✅ MANUAL SYNC COMPLETED: {success} success, {errors} errors",
+  "log_progress_update_fail": "Failed to update progress message: {error}",
+
+  "lang_dir_not_found": "Language directory not found: {dir}",
+  "lang_loaded": "Loaded language: {code}",
+  "lang_load_error": "Failed to load language {code}: {error}",
+  "lang_available": "Available languages: {codes}",
+  "lang_missing_format_key": "Missing format key {key} for {text}"
 }
