--- a/bot/resources/lang/fr.json
+++ b/bot/resources/lang/fr.json
@@ -160,5 +160,66 @@
   "publish_rate_limited": "⏳ Limite atteinte. Nouvel essai dans {seconds}s...",
   "publish_not_announcement_channel": "⚠️ Le canal n'est pas un canal d'annonce. Publication ignorée.",
   "publish_error": "❌ Échec de la publication : {error}",
-  "config_publish": "Publier aux abonnés"
+  "config_publish": "Publier aux abonnés",
+
+  "run_req_not_found": "{requirements} introuvable !",
+  "run_missing_deps": "Dépendances manquantes : {deps}",
+  "run_installing_deps": "Installation des dépendances...",
+  "run_deps_installed": "Dépendances installées avec succès.",
+  "run_deps_install_error": "Échec de l'installation des dépendances : {error}",
+  "run_press_enter": "Appuyez sur Entrée pour fermer...",
+  "run_playwright_ready": "Les navigateurs Playwright sont prêts.",
+  "run_playwright_check_failed": "Échec de la vérification du navigateur ({error}). Installation de Firefox...",
+  "run_playwright_installed": "Navigateurs Playwright installés avec succès.",
+  "run_playwright_warning": "Avertissement : Échec de la vérification de Playwright : {error}",
+  "run_import_error": "Échec de l'importation du bot : {error}",
+  "run_token_missing": "ASSETS_BOT_TOKEN non défini !",
+  "run_token_hint": "Veuillez le définir dans token.txt ou config.py",
+  "run_starting": "Démarrage du Fab Seller Tracker Bot...",
+  "run_stopped_user": "Bot arrêté par l'utilisateur.",
+  "run_critical_error": "Erreur critique : {error}",
+
+  "log_version_load_error": "Échec du chargement des informations de version : {error}",
+  "log_slash_synced": "Commandes slash synchronisées",
+  "log_connected": "Connecté en tant que {user}",
+  "log_scheduler_cancelled": "Tâche planificateur annulée pour redémarrage",
+  "log_scheduler_restarted": "Tâche planificateur redémarrée",
+  "log_next_sync": "│ 🕒 PROCHAINE SYNC DANS : {hours} heures ({time})",
+  "log_no_schedule": "Aucun planning actif trouvé, attente 1 heure",
+  "log_scheduler_error": "Erreur du planificateur : {error}",
+  "log_sync_skipped": "Sync automatique ignorée : Sync déjà en cours",
+  "log_sync_started": "│ 🔄 SYNC DÉMARRÉE ({count} sellers à vérifier)        │",
+  "log_syncing_seller": "  » Synchronisation [{current}/{total}] : {seller}",
+  "log_changes": "  ↳ Changements : {new} nouveaux, {upd} mis à jour",
+  "log_scraping_failed": "  ↳ Échec du scraping pour {seller}",
+  "log_check_error": "  ↳ Erreur de vérification pour {url} : {error}",
+  "log_sync_completed": "│ ✅ SYNC TERMINÉE : {success} succès, {errors} erreurs      │",
+  "log_guild_notif_error": "Erreur de notification de guilde {guild} : {error}",
+  "log_not_announcement": "Le canal {channel} n'est pas un canal d'annonce",
+  "log_published_immediate": "Message {msg} publié immédiatement",
+  "log_queued": "Message {msg} mis en file d'attente ({size} en attente, ~{time} min)",
+  "log_publish_no_perms": "Permissions manquantes pour publier dans le canal {channel}",
+  "log_publish_queue_error": "Erreur lors de la mise en file d'attente du message : {error}",
+  "log_publish_worker_start": "Worker de publication démarré",
+  "log_collect_wait": "Premier message reçu, attente de {delay}s pour en collecter plus...",
+  "log_publishing_batch": "Publication du lot de {count} messages ({remaining} restants)",
+  "log_published_success": "Message {msg} publié avec succès",
+  "log_rate_limited": "Limite de débit atteinte. Attente de {seconds}s...",
+  "log_published_retry": "Message {msg} publié après attente de limite",
+  "log_publish_retry_fail": "Échec de publication après nouvelle tentative : {error}",
+  "log_http_error": "Erreur HTTP lors de la publication du message {msg} : {error}",
+  "log_publish_forbidden": "Permissions manquantes pour publier le message {msg}",
+  "log_publish_error": "Erreur lors de la publication du message {msg} : {error}",
+  "log_batch_wait": "Lot terminé. Attente de {delay}s avant le prochain lot ({remaining} restants)",
+  "log_worker_cancelled": "Worker de publication annulé",
+  "log_worker_error": "Erreur du worker de publication : {error}",
+  "log_manual_sync_start": "│ 🔄 SYNC MANUELLE DÉMARRÉE (Serveur : {guild})",
+  "log_manual_sync_complete": "│ ✅ SYNC MANUELLE TERMINÉE : {success} succès, {errors} erreurs",
+  "log_progress_update_fail": "Échec de la mise à jour du message de progression : {error}",
+
+  "lang_dir_not_found": "Répertoire de langues introuvable : {dir}",
+  "lang_loaded": "Langue chargée : {code}",
+  "lang_load_error": "Échec du chargement de la langue {code} : {error}",
+  "lang_available": "Langues disponibles : {codes}",
+  "lang_missing_format_key": "Clé de format manquante {key} pour {text}"
 }
